resources/tests/files/fail/NonMutableField.krna


struct NonMutable {
    x: int
}

fn assign() {
    let m = NonMutable { x: 1 }

    m.x = 2
}